<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="ConjunctionView_screen_title">Conjuction (AND)</string>
    <string name="ConjunctionView_title_left">A</string>
    <string name="ConjunctionView_title_center">B</string>
    <string name="ConjunctionView_title_right">A ^ B</string>
    <string name="ConjunctionView_question_label_one">%s</string>
    <string name="ConjunctionView_question_label_two">%s</string>
    <string name="ConjunctionView_question_label_three">%s</string>
    <string name="ConjunctionView_question_label_four">%s</string>
    <string name="ConjunctionView_question_label_five">%s</string>
    <string name="ConjunctionView_question_label_six">%s</string>
    <string name="ConjunctionView_question_label_seven">%s</string>
    <string name="ConjunctionView_question_label_eight">%s</string>
    <string name="ConjunctionView_submit_button">SUBMIT</string>
    <string name="ConjunctionView_answer_correct">Correct</string>
    <string name="ConjunctionView_answer_incorrect">Incorrect</string>
    <string name="ConjunctionView_answer_true">T</string>
    <string name="ConjunctionView_answer_false">F</string>
</resources>