<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/conjuctionViewTitleCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ConjunctionView_title_center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/conjuctionViewTitleRight"
        app:layout_constraintStart_toEndOf="@+id/conjuctionViewTitleLeft"
        app:layout_constraintTop_toBottomOf="@+id/conjuctionViewTitleLabel" />

    <EditText
        android:id="@+id/txtFieldAnswerThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionSix"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionFour" />

    <TextView
        android:id="@+id/lblQuestionSeven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_seven"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/lblQuestionEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionSix" />

    <TextView
        android:id="@+id/lblQuestionOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_one"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/lblQuestionTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuctionViewTitleCenter" />

    <TextView
        android:id="@+id/lblQuestionEight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_eight"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFieldAnswerFour"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionSeven"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionSix" />

    <TextView
        android:id="@+id/conjuctionViewTitleLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ConjunctionView_title_left"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/conjuctionViewTitleCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuctionViewTitleLabel" />

    <EditText
        android:id="@+id/txtFieldAnswerFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="5"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionEight"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionSix" />

    <EditText
        android:id="@+id/txtFieldAnswerOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="5"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionTwo"
        app:layout_constraintTop_toBottomOf="@+id/conjuctionViewTitleCenter" />

    <EditText
        android:id="@+id/txtFieldAnswerTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="5"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionTwo"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionTwo" />

    <TextView
        android:id="@+id/lblQuestionFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_four"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFieldAnswerTwo"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionThree"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionTwo" />

    <TextView
        android:id="@+id/lblQuestionThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_three"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/lblQuestionFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionTwo" />

    <TextView
        android:id="@+id/conjuctionViewTitleRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ConjunctionView_title_right"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/conjuctionViewTitleCenter"
        app:layout_constraintTop_toBottomOf="@+id/conjuctionViewTitleLabel" />

    <TextView
        android:id="@+id/lblQuestionSix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_six"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFieldAnswerThree"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionFive"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionFour" />

    <TextView
        android:id="@+id/lblQuestionFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_five"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/lblQuestionSix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionFour" />

    <TextView
        android:id="@+id/lblQuestionTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ConjunctionView_question_label_two"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFieldAnswerOne"
        app:layout_constraintStart_toEndOf="@+id/lblQuestionOne"
        app:layout_constraintTop_toBottomOf="@+id/conjuctionViewTitleCenter" />

    <TextView
        android:id="@+id/conjuctionViewTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ConjunctionView_screen_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConjunctionView_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestionEight"
        app:layout_constraintVertical_bias="0.712" />

</androidx.constraintlayout.widget.ConstraintLayout>